--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
