--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 LOCAL_DB=mongodb://localhost:27017/buy-sell
 PORT=8000
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://buy-sell-v1.herokuapp.com
 JWT_SECRET=JKDFKJU43809445aHUH3IUHUI
